using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimationStrings
{
    public static string isMoving = "isMoving";
    public static string isRunning = "isRunning";
    public static string isGrounded = "isGrounded";
    public static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeilign = "isOnCeiling";
    internal static string attackTrigger = "attack";
}
